# uav_perception

./: readme.md
model/: yolov5n_rk3588.rknn
src/VINS-Fusion/config/cam_imu/: cam0.yaml  cam1  mono_imu.yaml
src/VINS-Fusion/vins_estimator/: CMakeLists.txt
src/VINS-Fusion/vins_estimator/launch/: mono_imu.launch
src/VINS-Fusion/vins_estimator/src/: ego_depth_fused_node.cpp
src/human_follow_rknn/: CMakeLists.txt  package.xml
src/human_follow_rknn/include/human_follow_rknn/: rknn_yolo.h
src/human_follow_rknn/launch/: debug_tracker.launch  human_follow_with_px4ctrl.launch
src/human_follow_rknn/msg/: TargetInfo.msg
src/human_follow_rknn/src/: human_follow_px4ctrl_node.cpp  human_tracker_node.cpp  rknn_yolo.cpp
src/planner/plan_manage/launch/: advanced_param.launch  advanced_param.launch.py  ego_cloud.launch  ego_cloud.launch.py  single_run_vins_depth.launch.launch
src/px4ctrl/config/: ctrl_param_fpv.yaml
src/px4ctrl/src/: PX4CtrlFSM.cpp  px4ctrl_node.cpp  px4ctrl_performance_monitor.cpp.cpp  test_px4ctrl_trajectory.cpp.cpp
